# byline

./: .env.example  .gitignore  AGENTS.md  HANDBOOK (1).md  Mkaan_AI_Report.md  Mkaan_AI_Report_Full.md  README.md  byline-chat-dashboard.html  byline-code.json  byline-frontend-prompts.md  byline-v2-spec.md  byline_dashboard_ux_critique.html  cli.py  convert_html.py  index.html  landing-v3.html  pyproject.toml  tmp.json  tmp_fetch.py
apps/api/: alembic.ini  config.py  main.py
byline/: BYLINE-DASHBOARD.md  PROJECT.md  README.md  debug_add_braces.cjs  debug_ast.cjs  debug_braces.cjs  debug_context_count.cjs  debug_find_brace.cjs  debug_strings.cjs  debug_trace.cjs  debug_unclosed.cjs  design.md  fix_comments.cjs  fix_comments2.cjs  format_files.cjs  index.html  package-lock.json  package.json  playwright.config.ts  screenshot.js  strip_comments.cjs  verify_files.cjs  vite.config.ts
design-system-foundation-extracted/: index.html  package-lock.json  package.json
dispatch-md-extracted/: .env.example  AGENTS.md  BOOTSTRAP_PROMPT.md  COMPOSIO.md  DESIGN.md  PRD.md  PROMPTS.md  docker-compose.yml  graph.py  init.sql  opencode.json  state.py
graphify-out/: .graphify_analysis.json  graph.json  manifest.json
infra/: docker-compose.yml
landing/: index.html  index_last_commit.html  index_v2.html  index_v3.html  script.js  script_v2.js  script_v3.js  server.js  server_last_commit.js  styles.css  styles_v2.css  styles_v3.css
lovable-project/: package-lock.json
scripts/: check_files.py  dump_code.py  projects.json  seed_projects.py  verify_json.py
(+297 files in other folders)
