[project]
name = "byline"
version = "0.1.0"
description = "Byline — multi-agent content engine for developer-founders"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "anthropic>=0.57.1",
  "asyncpg>=0.30.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "langgraph>=0.6.0",
  "openai>=1.95.1",
  "pgvector>=0.4.1",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
